remove schema "Books"
