# src/main/java/io/swagger/api/gen/model/Books.java
@@ -1,63 +1,0 @@
-/*
- * Book Searcher
- * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
- *
- * OpenAPI spec version: 1.0.0
- *
- *
- * NOTE: This class is auto generated by the swagger code generator program.
- * https://github.com/swagger-api/swagger-codegen.git
- * Do not edit the class manually.
- */
-
-package io.swagger.api.gen.model;
-
-import java.util.Objects;
-
-import java.util.ArrayList;
-import java.util.List;
-
-import javax.validation.constraints.*;
-
-/** Books */
-@javax.annotation.Generated(
-  value = "io.swagger.codegen.languages.java.JavaJerseyServerCodegen",
-  date = "2018-04-17T14:21:51.738+08:00[Asia/Taipei]"
-)
-public class Books extends ArrayList<Book> {
-
-  @Override
-  public boolean equals(Object o) {
-    if (this == o) {
-      return true;
-    }
-    if (o == null || getClass() != o.getClass()) {
-      return false;
-    }
-    return true;
-  }
-
-  @Override
-  public int hashCode() {
-    return Objects.hash();
-  }
-
-  @Override
-  public String toString() {
-    StringBuilder sb = new StringBuilder();
-    sb.append("class Books {\n");
-    sb.append("    ").append(toIndentedString(super.toString())).append("\n");
-    sb.append("}");
-    return sb.toString();
-  }
-
-  /**
-   * Convert the given object to string with each line indented by 4 spaces (except the first line).
-   */
-  private String toIndentedString(Object o) {
-    if (o == null) {
-      return "null";
-    }
-    return o.toString().replace("\n", "\n    ");
-  }
-}
